--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,13 @@
+<div id="back-to-top">
+  Back to Top
+</div>
+
 <footer>
-  <br><br>
-  <p>&nbsp;Under development.</p>
-  <br><br>
+  <%= link_to 'Home', root_path %>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+  <%= link_to 'About', root_path %>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+  <%= link_to 'Contact', root_path %>
+  <br />
+  <div id="copy">
+    &copy; 2015 Carnegie Mellon University &mdash; Information Systems
+  </div>
 </footer>
