--- a/app/assets/stylesheets/user_keys.scss
+++ b/app/assets/stylesheets/user_keys.scss
@@ -5,9 +5,10 @@
 .staff_only { background-color: lighten($primary-color, 70); }
 .public_comments { background-color: lighten($body-font-color, 60) }
 
-
+// Styling for approval process indicator. Took way too long to write this.
 .approval-process-container {
   padding: 0;
+  border: none;
 
   #approval-statuses {
     position: relative;
@@ -73,24 +74,20 @@
       }
     }
 
-    > * > div {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    > * > div { @include word-wrap; }
 
     // > *:nth-child(n+2) { display: none; }
 
     /* phones */
-    @media (max-width: 767px) {
+    @media (max-width: 560px) {
       > *:nth-last-child(-n+2) { display: block; }
-      > * div { max-width: 60px; }
+      > * div { max-width: 60px; font-size: 0.6em;  }
     }
 
     /* tablets */
-    @media (min-width: 768px) and (max-width:991px) {
+    @media (min-width: 561px) and (max-width:991px) {
       > *:nth-last-child(-n+4) { display: block; }
-      > * div { max-width: 100px; }
+      > * div { max-width: 100px; font-size: 0.8em; }
     }
 
     /* desktops */
