--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,45 +1,65 @@
-  <ul class="left">
-    <!-- <li class="divider"></li> -->
+<% cName = controller.controller_name %>
+<% aName = controller.action_name %>
 
-    <!-- Begin admin login check-->
-    <% if logged_in? %>
-      <% if @current_user.role? :is_staff %>
-        <li><%= link_to "Users", users_path %></li>
-        <li><%= link_to "User Keys", user_keys_path %>
-        <li><%= link_to "Filters", filters_path %></li>
+<ul class="left">
+  <!-- <li class="divider"></li> -->
 
-        <li class="has-form" id="search-form">
-          <div class="collapsed_row">
-            <%= form_tag users_path, method: 'GET' do %>
-              <div class="search-label s4">
-                <%= submit_tag "Find User:", :name => nil, class: "search-button postfix" %>
-              </div>
-              <div class="search-param s8">
-                <%= text_field_tag :search, params[:search] %>
-              </div>
-            <% end %>
-          </div>
-        </li>
-      <% end %>
+  <!-- Begin admin login check-->
+  <% if logged_in? %>
+    <% if @current_user.role? :is_staff %>
+
+      <li class="<%= 'active' if cName == 'users' %>">
+        <%= link_to "Users", users_path %>
+      </li>
+      <li class="<%= 'active' if cName == 'user_keys' && aName != 'own_user_keys' %>">
+        <%= link_to "User Keys", user_keys_path %>
+      </li>
+      <li class="<%= 'active' if cName == 'filters' %>">
+        <%= link_to "Filters", filters_path %>
+      </li>
+
+      <li class="has-form" id="search-form">
+        <div class="collapsed_row">
+
+          <%= form_tag users_path, method: 'GET' do %>
+            <div class="search-label s4">
+              <div class="search-button postfix">Find User:</div>
+            </div>
+            <div class="search-param s8">
+              <%= text_field_tag :search, params[:search] %>
+            </div>
+          <% end %>
+
+        </div>
+      </li>
 
     <% end %>
-  </ul>
+  <% end %>
+</ul>
 
+
+<!-- Right Nav Section -->
 <ul class="right">
-  <!-- Right Nav Section -->
-  <ul class="right">
-    <% if logged_in? %>
+
+  <% if logged_in? %>
+
     <li class="has-dropdown">
       <a href="#">Welcome, <%= @current_user.andrew_id %>!</a>
       <ul class="dropdown">
-        <li><%= link_to "My Keys", own_user_keys_path %></li>
+
+        <li class="<%= 'active' if aName == 'own_user_keys' %>">
+          <%= link_to "My Keys", own_user_keys_path %>
+        </li>
+
         <li><%= link_to "Logout", logout_path %></li>
+
       </ul>
     </li>
-    <% else %>
-    <li>
-      <%= link_to "Login", login_path %>
-    </li>
-    <% end %>
-  </ul>
+
+  <% else %>
+
+    <li><%= link_to "Login", login_path %></li>
+
+  <% end %>
+
 </ul>
