Added javascript for new filter dropdown

--- a/app/views/filters/_form.html.erb
+++ b/app/views/filters/_form.html.erb
@@ -23,7 +23,7 @@
  </div>
   <div class="collapsed_row">
     <div class="three-column">
-      <%= f.label :filter_value, class: "prefix" %>
+      <%= f.label :filter_value, class: "prefix", allow_blank: true %>
     </div>
     <div class="nine-column">
       <%= f.text_field :filter_value %>
