--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -14,7 +14,7 @@
   </tbody>
 </table>
 
-<!-- Kaminari paginate -->
+<%# Kaminari paginate %>
 <div id="paginator">
   <%= paginate @filters, remote: true %>
 </div>
