--- a/app/views/shared/_boolean_label.html.erb
+++ b/app/views/shared/_boolean_label.html.erb
@@ -1,5 +1,5 @@
-<!-- passed in local boolean_label as true or false -->
-<!-- Passed in "true_message and false_message"--->
+<%# passed in local boolean_label as true or false %>
+<%# Passed in "true_message and false_message" %>
 
 <% if boolean_label %>
   <span class="success label"><%= true_message %></span>
