--- a/app/views/user_keys/form_partials/_application_text.html.erb
+++ b/app/views/user_keys/form_partials/_application_text.html.erb
@@ -6,7 +6,7 @@ Name:
  </small>
 </div>
 </p>
-<br/><br/><br/><br/><br/><br/> <!-- There's probably a better way to do that... -->
+<br/><br/><br/><br/><br/><br/> <%#  There's probably a better way to do that...  %>
 
 <p>1. Who are the other individual(s)/organization(s) bringing forward the proposal?
 How can they be reached?
