--- a/app/views/user_keys/form_partials/_terms.html.erb
+++ b/app/views/user_keys/form_partials/_terms.html.erb
@@ -18,7 +18,7 @@ including project/initiative overview, goals, and regular updates.
 University policy regarding intellectual property and copyright will apply
 to projects/initiatives utilizing the API and/or data from The Bridge.</p>
 
-<!-- Agree to sell your soul to Student Activities here -->
+<%# Agree to sell your soul to Student Activities here %>
 <div class="collapsed_row">
   <%= f.check_box :agree %>
   <%= f.label :agree %>
