--- a/app/views/user_keys/form_partials/text_partials/_text_item.html.erb
+++ b/app/views/user_keys/form_partials/text_partials/_text_item.html.erb
@@ -1,4 +1,4 @@
-<!--Passed in text_item as symbol variable from application_text partial-->
+<%#Passed in text_item as symbol variable from application_text partial %>
 <div class="collapsed_row">
   <div class="s3">
     <%= f.label text_item, class: "prefix" %>
