--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="row">
-  <!-- Kaminari paginate -->
+  <%#  Kaminari paginate  %>
   <div id="s6">
     <div id="paginator">
       <%= paginate @user_keys, remote: true %>
