--- a/app/views/user_keys/index_partials/_time_label.html.erb
+++ b/app/views/user_keys/index_partials/_time_label.html.erb
@@ -1,11 +1,11 @@
-<!-- variables passed in: -->
-<!-- stage_to_show_label: :stage, the stage when the label is shown -->
-<!-- stage_to_show_time: :stage, the stage when the timestamp is also shown -->
-<!-- user_key: user_key -->
-<!-- time_attr: the time attribute being shown-->
-<!-- time_expired is a special case; it's always visible to staffmembers
+<%# variables passed in: %>
+<%# stage_to_show_label: :stage, the stage when the label is shown %>
+<%# stage_to_show_time: :stage, the stage when the timestamp is also shown %>
+<%# user_key: user_key %>
+<%# time_attr: the time attribute being shown%>
+<%# time_expired is a special case; it's always visible to staffmembers %>
 
-<!-- temp_true_message and temp_false_message are optional parameters -->
+<%# temp_true_message and temp_false_message are optional parameters %>
 
 <% temp_true_message ||= "Completed" %>
 <% temp_false_message ||= "Incomplete" %>
