--- a/app/views/user_keys/show_partials/_application_text.html.erb
+++ b/app/views/user_keys/show_partials/_application_text.html.erb
@@ -6,6 +6,6 @@
 <li><%= @user_key.proposal_text_five %></li>
 <li><%= @user_key.proposal_text_six %></li>
 <li><%= @user_key.proposal_text_seven %></li>
-<!-- Number 8 is optional-->
+<%# Number 8 is optional %>
 <li><%= @user_key.proposal_text_eight.blank? ? 'N/A' : @user_key.proposal_text_eight %></li>
 </ol>
