--- a/app/views/user_keys/show_partials/_approval_checkbox.html.erb
+++ b/app/views/user_keys/show_partials/_approval_checkbox.html.erb
@@ -1,14 +1,14 @@
-<!-- Allow an approve to toggle approval only during awaiting_confirmation stage-->
-<div class="staff_only panel"
+<%# Allow an approve to toggle approval only during awaiting_confirmation stage %>
+<div class="staff_only panel">
   <% if @user_key.approved_by?(@current_user) %>
-    
+
     <p><strong>You have approved this key.</strong></p>
-    <%= link_to 'Undo approve key', undo_approve_key_path(@user_key), method: :patch, class: "big-button secondary" %> 
-  
-  <% else %> <!--This user has not approved the key yet-->
-    
-    <p><strong>You have not approved this key yet.</strong></p> 
-    <%= link_to 'Approve key', approve_key_path(@user_key), method: :patch, class: "big-button" %> 
-  
+    <%= link_to 'Undo approve key', undo_approve_key_path(@user_key), method: :patch, class: "big-button secondary" %>
+
+  <% else %> <%# his user has not approved the key yet  %>
+
+    <p><strong>You have not approved this key yet.</strong></p>
+    <%= link_to 'Approve key', approve_key_path(@user_key), method: :patch, class: "big-button" %>
+
   <% end %>
 </div>
