--- a/app/views/user_keys/show_partials/_list_of_objects.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_objects.html.erb
@@ -1,4 +1,4 @@
-<!-- Pass in object_symbol i.e. :filters, object_name i.e. "Filter"-->
+<%# Pass in object_symbol i.e. :filters, object_name i.e. "Filter" %>
 
 <p>
   <h3><%= object_name.pluralize %></h3><br />
@@ -12,7 +12,7 @@
               <% if object_name == "Filter" %>
                 <li><%= link_to((obj.name), filter_path(obj))%></li>
               <% else %>
-                <li><%= obj.name %></li> <!-- There are no column pages-->
+                <li><%= obj.name %></li> <%# There are no column pages %>
               <% end %>
           <% end %>
         </ul>
