--- a/app/views/user_keys/show_partials/_sublist_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_sublist_of_comments.html.erb
@@ -1,4 +1,4 @@
-<!-- Local variables passed in: comment_type, comments-->
+<%# Local variables passed in: comment_type, comments %>
 <fieldset>
 
 <h3><%= comment_type %></h3>
@@ -23,5 +23,5 @@
     </fieldset>
     <% end %>
   <% end %>
-  
+
 </fieldset>
