--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,21 +1,26 @@
 <% cName = controller.controller_name %>
 <% aName = controller.action_name %>
 
-<ul class="left">
-  <!-- <li class="divider"></li> -->
+<ul id="nav-links" class="left">
 
-  <!-- Begin admin login check-->
+   <%# Begin admin login check %>
   <% if logged_in? %>
     <% if @current_user.role? :is_staff %>
 
       <li class="<%= 'active' if cName == 'users' %>">
         <%= link_to "Users", users_path %>
       </li>
+
       <li class="<%= 'active' if cName == 'user_keys' && aName != 'own_user_keys' %>">
         <%= link_to "User Keys", user_keys_path %>
       </li>
+
       <li class="<%= 'active' if cName == 'filters' %>">
         <%= link_to "Filters", filters_path %>
+      </li>
+
+      <li class="<%= 'active' if aName == 'own_user_keys' %>">
+        <%= link_to "My Keys", own_user_keys_path %>
       </li>
 
       <li class="has-form" id="search-form">
@@ -29,7 +34,6 @@
               <%= text_field_tag :search, params[:search] %>
             </div>
           <% end %>
-
         </div>
       </li>
 
@@ -38,18 +42,14 @@
 </ul>
 
 
-<!-- Right Nav Section -->
-<ul class="right">
+<%# Right Nav Section %>
+<ul id="drop-links" class="right">
 
   <% if logged_in? %>
 
     <li class="has-dropdown">
       <a href="#">Welcome, <%= @current_user.andrew_id %>!</a>
       <ul class="dropdown">
-
-        <li class="<%= 'active' if aName == 'own_user_keys' %>">
-          <%= link_to "My Keys", own_user_keys_path %>
-        </li>
 
         <li><%= link_to "Logout", logout_path %></li>
 
