--- a/app/views/user_keys/index.js.erb
+++ b/app/views/user_keys/index.js.erb
@@ -1,3 +1,3 @@
-<!-- For use with ajax and pagination -->
+<%# For use with ajax and pagination %>
 $('#all_user_keys').html('<%= escape_javascript render partial: 'user_keys/index_partials/index_table', locals: { keys: @user_keys, list_all: true } %>');
 $('#paginator').html('<%= escape_javascript paginate(@user_keys, remote: true).to_s %>');
