--- a/app/views/user_keys/index_partials/_row_times.html.erb
+++ b/app/views/user_keys/index_partials/_row_times.html.erb
@@ -1,5 +1,5 @@
-<!-- user_key passed in from partial call. -->
-<!-- This partial is used by both own_user_keys, index, and show pages. -->
+<%# user_key passed in from partial call. %>
+<%# This partial is used by both own_user_keys, index, and show pages. %>
 
 
 <td>
@@ -14,11 +14,11 @@
   <%= render partial: 'user_keys/index_partials/time_label', locals: { stage_to_show_label: :awaiting_confirmation, stage_to_show_time: :confirmed, user_key: user_key, time_attr: :time_confirmed} %>
 </td>
 <td>
-  <!-- :time_expired is a special case, show that to staffmembers if before confirmed stage also -->
+  <%#  :time_expired is a special case, show that to staffmembers if before confirmed stage also  %>
   <%= render partial: 'user_keys/index_partials/time_label', locals: { stage_to_show_label: :confirmed, stage_to_show_time: :confirmed, user_key: user_key,
 								      time_attr: :time_expired, temp_false_message: "Expired", temp_true_message: "Not Expired"} %>
 </td>
-<!-- Show active too-->
+<%# Show active too %>
 <% if @current_user.role? :is_staff %>
   <td><%= render partial: 'shared/boolean_label', locals: { boolean_label: user_key.active, true_message: "Yes", false_message: "No" } %>
 <% end %>
