--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -12,34 +12,13 @@
 
 <%= render 'shared/error_messages', object: @user_key %>
 
-<!-- Only Staff should see this status bar.-->
+<%# Only Staff should see this status bar. %>
 <% if @current_user.role? :is_staff %>
   <%= render partial: 'user_keys/show_partials/approval_status' %>
-<% end %> 
+<% end %>
 
-<!-- Everyone can see most of the following information.-->
-    
-<!-- Timestamps -->
-<table>
-  <tr>
-    <th>Request Form Status</th>
-    <th>Submission</th>
-    <% if @current_user.role? :is_staff %>
-      <th>Ready for approval</th>
-    <% end %> 
-    <th>Confirmation</th>
-    <th>Expires</th>
-    <% if @current_user.role? :is_staff %>
-      <th>Active</th>
-    <% end %>
-  </tr>
-  <tr>
-    <td class="text-center">
-      <%= render partial: 'shared/boolean_label', locals: { boolean_label: (@user_key.can_be_set_to? :awaiting_filters), true_message: "Completed", false_message: "Incomplete" } %>
-    </td>
-    <%= render partial: 'user_keys/index_partials/row_times', locals: { user_key: @user_key } %>
-  </tr>
-</table>
+<%# Everyone can see most of the following information. %>
+    <%#  TODO show expires, active  %>
 
 <table>
   <tr>
@@ -59,45 +38,45 @@
   <%= render partial: 'user_keys/show_partials/application_text' %>
 </p>
 
-<!--Show notes from Admin -->
+<%# Show notes from Admin %>
 <div class="public_comments">
   <%= render partial: 'user_keys/show_partials/sublist_of_comments', locals: { comments: @public_comments, comment_type: "Messages from Administrator" } %>
-</div> 
-<!-- End of public information. -->
+</div>
+<%# End of public information. %>
 
-<!-- Staffmembers see private information -->
+<%# Staffmembers see private information %>
 <% if @current_user.role? :is_staff %>
   <div class="staff_only panel">
   <h3>Staff only</h3>
   <hr/>
-    
+
     <%= render partial: 'user_keys/show_partials/list_of_objects', locals: { object_name: "Column", object_symbol: :columns} %>
-    
+
     <%= render partial: 'user_keys/show_partials/list_of_objects', locals: { object_name: "Filter", object_symbol: :filters} %>
-  
+
     <%= render partial: 'user_keys/show_partials/list_of_organizations' %>
-    
-    <!-- Show the key's approvers if the key is at the approval stage or later. -->
+
+    <%#  Show the key's approvers if the key is at the approval stage or later.  %>
     <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :confirmed %>
-      <%= render partial: 'user_keys/show_partials/list_of_approvers' %> 
+      <%= render partial: 'user_keys/show_partials/list_of_approvers' %>
     <% end %>
-    
+
   </div>
 <% end %>
 
-<!-- End of general staff-only information. -->
+<%# End of general staff-only information. %>
 
-<!-- Approvers submit their approval here -->
+<%# Approvers submit their approval here %>
 <% if @user_key.at_stage? :awaiting_confirmation and @current_user.role? :is_approver %>
   <%= render partial: 'user_keys/show_partials/approval_checkbox' %>
 <% end  %>
 
-<!-- Confirm, reset, delete, and apply filters here. -->
+<%# Confirm, reset, delete, and apply filters here. %>
 <% if @current_user.role? :admin and !(@user_key.at_stage? :awaiting_submission) %>
   <%= render partial: 'user_keys/show_partials/admin_only' %>
-<!-- Otherwise, key owner can submit the key or edit request.-->
+<%# Otherwise, key owner can submit the key or edit request. %>
 <% elsif @current_user.owns?(@user_key) and @user_key.at_stage? :awaiting_submission %>
   <%= render partial: 'user_keys/show_partials/submit_buttons' %>
 <% end %>
-             
+
 <%= render partial: 'user_keys/show_partials/list_of_comments' %>
