--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,9 +5,11 @@
     <% if logged_in? and @current_user.role? :is_staff %>
     <li><%= link_to "Users", users_path %></li>
     
-    <li><%= link_to "User Keys", user_keys_path %>
+    <li><%= link_to "User Keys", user_keys_path %></li>
     
     <li><%= link_to "Filters", filters_path %></li>
+    
+    <li><%= link_to "Orgs", organizations_path %></li>
   
     <li class="has-form">
       <div class="collapsed_row">
