--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Resource</th>
       <th>Filter</th>
-      <th colspan="3"></th>
+      <th>Used?</th>
     </tr>
   </thead>
 
