Added please-wait message to patch buttons; added button to repopulate Columns

--- a/app/views/user_keys/show_partials/_add_comment.html.erb
+++ b/app/views/user_keys/show_partials/_add_comment.html.erb
@@ -22,7 +22,7 @@
   <% end %>
   
   <div class="actions">
-    <%= f.submit class: "big-button", value: "Add comment" %>
+    <%= f.submit class: "big-button", value: "Add comment", data: {disable_with: "Please Wait..." } %>
   </div>
   
   </fieldset>
