--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -91,7 +91,8 @@
   
   <!-- "cancel_url" is passed as a local variable from new and edit-->
   <div class="actions">
-    <%= f.submit current_page?(:action => 'new')? "Create application" : "Update application", class: "big-button success" %> | 
+    <%= f.submit current_page?(:action => 'new')? "Create application" : "Update application",
+        class: "big-button success", data: {disable_with: "Please Wait..." } %> | 
     <%= link_to 'Cancel', cancel_url, class: "big-button secondary" %>
   </div>
   
