--- a/app/views/user_keys/show_partials/_approval_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_approval_buttons.html.erb
@@ -2,6 +2,7 @@
 
   <%= link_to 'Share key with approvers', set_as_filtered_path(@user_key),
               method: :patch, class: "big-button success",
+              data: {disable_with: "Please Wait..." },
               disabled: !(@user_key.can_be_set_to? :awaiting_confirmation) %> |
 
 <% elsif @user_key.at_stage? :awaiting_confirmation %>
@@ -13,7 +14,9 @@
     <p>This key cannot be released to the requester yet.</p>
   <% end %>
     
-    <%= link_to 'Confirm and release key to user', set_as_confirmed_path(@user_key), data: { confirm: 'Are you sure? If you click OK, a confirmation email will be sent to the key requester and this key request will be complete.' },
+    <%= link_to 'Confirm and release key to user', set_as_confirmed_path(@user_key),
+        data: { confirm: 'Are you sure? If you click OK, a confirmation email will be sent to the key requester and this key request will be complete.' ,
+        disable_with: "Please Wait..." },
         method: :patch, class: "big-button success", disabled: !(@user_key.can_be_set_to? :confirmed) %> |
 
 <% end %>
