--- a/app/views/user_keys/show_partials/_submit_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_submit_buttons.html.erb
@@ -1,6 +1,8 @@
 <!-- Key owner can submit the key or edit the application before submitting. -->
 <%= link_to 'Submit request', set_as_submitted_path(@user_key), method: :patch,
-            class: "big-button success", disabled: !(@user_key.can_be_set_to? :awaiting_filters)  %>
+            data: {disable_with: "Please Wait..." },
+            class: "big-button success",
+            disabled: !(@user_key.can_be_set_to? :awaiting_filters)  %>
 |
 <%= link_to 'Edit application', edit_user_key_path(@user_key), class: "big-button" %> | 
 
