Search bar working

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -7,6 +7,7 @@
       ul#drop-links li.active > a  { background-color: $topbar-link-bg-hover; }
 
       #search-form {
+        margin-right: -1rem;
         @media screen and (max-width: rem-calc(860)) { display: none; }
 
         .search-label {
