--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,13 +1,21 @@
 @import "vars";
 
+input {
+  @include placeholder {
+    font-size: 0.7rem;
+    color: $placeholder;
+  }
+}
+
 // Navbar
-  nav.top-bar {
+  nav#topbar {
+    margin-bottom: 2rem;
+
     div.top-bar-section {
       ul#nav-links li.active > a,
       ul#drop-links li.active > a  { background-color: $topbar-link-bg-hover; }
 
       #search-form {
-        margin-right: -1rem;
         @media screen and (max-width: rem-calc(860)) { display: none; }
 
         .search-label {
@@ -15,26 +23,36 @@
           padding-left: 0;
         }
 
-        .search-button {
+        .search-type-select {
           padding: 0;
           font-size: 0.7rem;
-          color: $body-dark;
-          background: $white;
+          color: $placeholder;
+          outline: none !important;
           border: none;
+          border-left: solid 1px rgba(0,0,0,0.1);
           border-radius: 0;
           height: 1.75rem;
           top: 0.6875rem;
           line-height: 1.75rem;
           cursor: default;
+          &:hover { outline: none; border-left: solid 1px rgba(0,0,0,0.3); }
+
+          option {
+            height: 20px;
+            color: $placeholder;
+            line-height: 10px;
+          }
         }
 
 
         .search-param {
-          padding-left: 0;
+          padding-right: 0;
 
           #term {
             border: none;
             box-shadow: none;
+            font-size: 0.7rem;
+            color: $body-dark;
           }
         }
       }
@@ -46,8 +64,8 @@
   .autocomplete-suggestions {
     color: $body;
     background: $white;
-    font-size: 0.75em;
-    width: 124px !important;
+    font-size: 0.7em;
+    width: 158px !important;
 
     .autocomplete-suggestion {
       cursor: pointer;
@@ -55,6 +73,8 @@
       line-height: 10px;
       padding: 5px;
       text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
 
       &:hover,
       &:focus,
