--- a/app/assets/stylesheets/vars.scss
+++ b/app/assets/stylesheets/vars.scss
@@ -1,21 +1,18 @@
 $primary: #990000;
 $secondary: #D4D4D4;
-$disabled: #555;
 $success: darken(#dff0d8, 5%);
 $info: #fcf8e3;
 $alert: darken(#f2dede, 5%);
 $link: #008cba;
-
-$secondary-dark: #464646;
-$secondary-light: #F4F4F4;
+$placeholder: rgba(0,0,0,0.4);
 $white: #fff;
 $black: #000;
-$light-blue: #7493AA;
-$green: #999933;
 $body: #686565;
 $body-dark: #222;
-$placeholder: rgba(0,0,0,0.4);
-$placeholder-blue: #D4DEE2;
+
+$disabled: #555;
+$secondary-dark: #464646;
+$secondary-light: #F4F4F4;
 
 %center-text-XY {
   position: absolute;
@@ -31,4 +28,11 @@ $placeholder-blue: #D4DEE2;
   -webkit-hyphens: auto;
   -moz-hyphens:    auto;
   hyphens:         auto;
+}
+
+@mixin placeholder {
+  &::-webkit-input-placeholder {@content}
+  &:-moz-placeholder           {@content}
+  &::-moz-placeholder          {@content}
+  &:-ms-input-placeholder      {@content}
 }
