--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <header class="contain-to-grid">
-  <nav class="top-bar" data-topbar role="navigation">
+  <nav id="topbar" class="top-bar" data-topbar role="navigation">
 
     <ul class="title-area">
       <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
