--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -38,11 +38,17 @@
           <div class="collapsed_row">
 
             <div id="searchbox">
-              <div class="search-label s4">
-                <div class="search-button postfix">Find User:</div>
-              </div>
               <div class="search-param s8">
-                <%= text_field_tag :term, params[:term], { "data-search-path" => users_search_path, "data-users-path" => users_path } %>
+                <%= text_field_tag :term, params[:term], {
+                  "data-users-search-path" => users_search_path,
+                  "data-keys-search-path" => user_keys_search_path,
+                  "data-users-path" => users_path,
+                  "data-keys-path" => user_keys_path,
+                  placeholder: 'Search for...'
+                } %>
+              </div>
+              <div class="search-label s4">
+                <%= select_tag "search-type-select", options_for_select(["users","keys"]), class: "search-type-select postfix", id: "search-type-select" %>
               </div>
             </div>
 
